<resources>
    <string name="app_name">Benayty</string>

    <string name="floating_button_tool_tip">إضافة إعلان جديد</string>

    <string name="navigation_back">رجوع</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_item_home">الرئيسية</string>
    <string name="menu_item_heart">المفضلة</string>
    <string name="menu_item_notification">الإشعارات</string>
    <string name="menu_item_speech">الرسائل</string>

    <string name="wishlist_fragment">المفضلة</string>
    <string name="notification_fragment">الإشعارات</string>
    <string name="speech_fragment">الرسائل</string>
    <string name="main_category_fragment">Main Category Fragment</string>

    <string name="home_page_title">الرئيسية</string>
    <string name="wish_list_page_title">المفضلة</string>
    <string name="notifications_page_title">الإشعارات</string>
    <string name="messages_page_title">الرسائل</string>

    <string name="error_connection">حدث خطأ</string>

    <string name="choose_main_item">اختر القسم الرئيسي</string>
    <string name="choose_secondary_item">اختر القسم الفرعي</string>
    <string name="choose_area">اختر المنطقة</string>
    <string name="choose_city">اختر المدينة</string>
    <string name="find_secondary_items">بحث</string>
    <string name="close_dialog">إلغاء</string>

    <string name="check_code">إرسال</string>

    <string name="drawer_item_main">الصفحة الرئيسية</string>
    <string name="drawer_item_my_ads">إعلاناتي</string>
    <string name="drawer_item_register">التسجيل</string>
    <string name="drawer_item_wish_list">المفضلة</string>
    <string name="drawer_item_contact_us">اتصل بنا</string>
    <string name="drawer_item_login_logout">تسجيل الدخول / الخروج</string>

    <string name="contact_us_name">اسم المستخدم</string>
    <string name="contact_us_email">البريد الإليكتروني</string>
    <string name="contact_us_phone">الجوال</string>
    <string name="contact_us_subject">عنوان الرسالة</string>
    <string name="contact_us_message">محتوى الرسالة</string>
    <string name="contact_us_send">إرسال الرسالة</string>

    <string name="enter_your_name">من فضلك أدخل اسمك</string>
    <string name="enter_your_email">من فضلك أدخل البريد الإليكتروني</string>
    <string name="enter_valid_email">البريد الإليكتروني غير صالح .. من فضلك أدخل بريد إليكتروني صحيح</string>
    <string name="enter_your_phone">من فضلك أدخل رقم التليفون</string>
    <string name="enter_valid_phone">رقم التليفون غير صالح .. من فضلك أدخل رقم تليفون صحيح</string>
    <string name="enter_subject">من فضلك أدخل عنوان الرسالة</string>
    <string name="enter_message">من فضلك أدخل عنوان الرسالة</string>

    <string name="login_field_phone">الجوال</string>
    <string name="login_field_password">كلمة المرور</string>
    <string name="login_field_name">الاسم</string>
    <string name="login_field_email">البريد الإليكتروني</string>
    <string name="login_field_confirm_password">أعد إدخال كلمة المرور</string>

    <string name="login_button_login">دخول</string>
    <string name="login_button_register">تسجيل</string>
    <string name="login_button_update_password">حفظ كلمة المرور</string>
    <string name="login_button_send_for_password">إرسال</string>

    <string name="forgot_password"><u>هل نسيت كلمة المرور؟</u></string>
    <string name="register"><u>إنشاء حساب جديد</u></string>

    <string name="login_title_login">تسجيل الدخول</string>
    <string name="login_title_register">التسجيل</string>
    <string name="login_title_forgot_password">نسيت كلمة المرور؟</string>
    <string name="login_title_update_password">استعادة كلمة المرور</string>

    <string name="enter_the_code">أدخل الكود</string>
    <string name="wrong_code">الكود غير صحيح</string>
    <string name="no_code_entered">من فضلك أدخل الكود</string>
    <string name="resend_code">إعادة إرسال الكود</string>

    <string name="checking_code_dialog_title">التأكد من الكود المرسل لك عبر البريد الإلكتروني</string>

    <string name="adding_ad">إضافة إعلان</string>

    <string name="adding_ad_main_category">القسم الرئيسي</string>
    <string name="adding_ad_secondary_category">القسم الفرعي</string>
    <string name="adding_ad_area">المنطقة</string>
    <string name="adding_ad_city">المدينة</string>
    <string name="adding_ad_name">اسم الإعلان</string>
    <string name="adding_ad_mobile">الجوال</string>
    <string name="adding_ad_description">الوصف</string>
    <string name="adding_ad_image">إضافة صورة</string>
    <string name="adding_ad_next_page">التالي</string>
    <string name="adding_ad_submit">إرسال</string>

    <string name="comments">التعليقات</string>

    <string name="write_your_comment">اكتب تعليقك</string>
    <string name="add_comment">أضف التعليق</string>
    <string name="cancel">إلغاء</string>

    <string name="login_first">قم بتسجيل الدخول أولاً</string>

    <string name="no_wish_list_item">لا يوجد لديك أي إعلان في المفضلة</string>

    <string name="no_ad_for_you">ليس لديك أي إعلان</string>

    <string name="no_message_for_you">ليس لديك أي رسائل</string>

    <string name="no_notifications">ليس لديك أي إشعارات</string>

    <string name="login_first_to_add_ad">قم بتسجيل الدخول أولاً حتى تتمكن من إضافة إعلان</string>

</resources>
