<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_300sdp"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/checkingCodeDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/dialog_title_background"
        android:fontFamily="@font/cairo_bold"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/checking_code_dialog_title"
        android:textColor="#ffffff" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <EditText
            android:id="@+id/codeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:autofillHints="@string/enter_the_code"
            android:background="@drawable/login_field_background"
            android:fontFamily="@font/cairo_regular"
            android:gravity="start"
            android:hint="@string/enter_the_code"
            android:inputType="text"
            android:padding="@dimen/_13sdp"
            android:textColor="@color/appColor"
            android:textColorHint="@color/appColor" />

        <TextView
            android:id="@+id/noCodeEnteredTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/codeEditText"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_3sdp"
            android:fontFamily="@font/cairo_bold"
            android:gravity="center"
            android:text="@string/no_code_entered"
            android:textColor="#ff0000"
            android:visibility="gone" />

        <TextView
            android:id="@+id/wrongCodeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/noCodeEnteredTextView"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_3sdp"
            android:fontFamily="@font/cairo_bold"
            android:gravity="center"
            android:text="@string/wrong_code"
            android:textColor="#ff0000"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/checkCodeButtonTextView"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/resendCodeButtonTextView"
                android:layout_width="0dp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/dialog_single_button_background"
                android:fontFamily="@font/cairo_bold"
                android:gravity="center"
                android:text="@string/resend_code"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/checkCodeCancelingButtonTextView"
                android:layout_width="0dp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/dialog_single_button_background"
                android:fontFamily="@font/cairo_bold"
                android:gravity="center"
                android:text="@string/close_dialog"
                android:textColor="#ffffff" />

        </LinearLayout>


        <TextView
            android:id="@+id/checkCodeButtonTextView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/dialog_single_button_background"
            android:fontFamily="@font/cairo_bold"
            android:gravity="center"
            android:text="@string/check_code"
            android:textColor="#ffffff" />
    </RelativeLayout>


</LinearLayout>