<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragments.MainCategoryFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/secondaryCategoryField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/appColor"
        android:gravity="center"
        android:padding="@dimen/_13sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_7sdp"
        android:background="@drawable/main_category_field_background"
        android:fontFamily="@font/cairo_regular"
        android:text="@string/choose_secondary_item" />

    <TextView
        android:id="@+id/areaField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/appColor"
        android:gravity="center"
        android:padding="@dimen/_13sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_7sdp"
        android:background="@drawable/main_category_field_background"
        android:fontFamily="@font/cairo_regular"
        android:text="@string/choose_area" />

    <TextView
        android:id="@+id/cityField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/appColor"
        android:gravity="center"
        android:padding="@dimen/_13sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_7sdp"
        android:background="@drawable/main_category_field_background"
        android:fontFamily="@font/cairo_regular"
        android:text="@string/choose_city" />

    <TextView
        android:id="@+id/findSecondaryCategoriesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:gravity="center"
        android:padding="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_7sdp"
        android:background="@drawable/search_button_background"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/find_secondary_items" />

</LinearLayout>