<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_200sdp"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">


    <EditText
        android:id="@+id/commentEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_7sdp"
        android:autofillHints="@string/write_your_comment"
        android:background="@drawable/login_field_background"
        android:fontFamily="@font/cairo_regular"
        android:gravity="start"
        android:hint="@string/write_your_comment"
        android:inputType="textMultiLine"
        android:padding="@dimen/_13sdp"
        android:textColor="@color/appColor"
        android:textColorHint="@color/appColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/cancelButtonTextView"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/dialog_single_button_background"
            android:fontFamily="@font/cairo_bold"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/addCommentButtonTextView"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/dialog_single_button_background"
            android:fontFamily="@font/cairo_bold"
            android:gravity="center"
            android:text="@string/add_comment"
            android:textColor="#ffffff" />

    </LinearLayout>

</LinearLayout>