<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragments.UpdatePasswordFragment">

    <EditText
        android:id="@+id/updatePasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_7sdp"
        android:autofillHints="@string/login_field_password"
        android:background="@drawable/login_field_background"
        android:fontFamily="@font/cairo_regular"
        android:gravity="start"
        android:hint="@string/login_field_password"
        android:inputType="textPassword"
        android:padding="@dimen/_13sdp"
        android:textAlignment="viewStart"
        android:textColor="@color/appColor"
        android:textColorHint="@color/appColor" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_7sdp"
        android:autofillHints="@string/login_field_confirm_password"
        android:background="@drawable/login_field_background"
        android:fontFamily="@font/cairo_regular"
        android:gravity="start"
        android:hint="@string/login_field_confirm_password"
        android:inputType="textPassword"
        android:padding="@dimen/_13sdp"
        android:textAlignment="viewStart"
        android:textColor="@color/appColor"
        android:textColorHint="@color/appColor" />

    <TextView
        android:id="@+id/changePasswordButtonTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_7sdp"
        android:background="@drawable/login_button_background"
        android:fontFamily="@font/cairo_bold"
        android:gravity="center"
        android:padding="@dimen/_13sdp"
        android:text="@string/login_button_update_password"
        android:textColor="#ffffff" />

</LinearLayout>